# rltviz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-04-28-rltviz-plan.md  2026-04-29-history.md  2026-04-29-rltviz-ui-upgrade.md
docs/superpowers/specs/: 2026-04-28-rltviz-design.md  2026-04-29-history-design.md  2026-04-29-rltviz-ui-design.md
src/: app.rs  config.rs  control.rs  curl_import.rs  engine.rs  history.rs  main.rs  metrics.rs  theme.rs
src/ui/: config_panel.rs  control_bar.rs  dashboard.rs  latency_chart.rs  mod.rs  stat_cards.rs  status_chart.rs
