[package]
name = "rltviz"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
curl-parser = "0.6"
